9.nov (lv)
      - fix MusicXML import of <harmony>
      (ws)
      - entering lyrics entry mode also by selecting lyrics + Ctrl+L
      - up/down moves lyrics to next/previous verse (if slot is empty)
      - if lyrics is selected, cursor next/previous move to next/prev lyrics
      - fix: hide cursor after play ends
      - fix: clef changes are not always saved
      - fix: cursor left/right to next/prev. lyrics in lyrics editing mode
      - fix: delete verse > 1 of lyrics
      - fix: changing instrument name in part properties did not work
      - fix creation of new scores with pickup measure
      - suggest first "Title" string as filename on first save. Replace spaces
        and newlines with underscore.
      - If a global color is specified in appstyle.css, menus are not rendered
        anymore by mstyle and menu titles (separators with text) disappear.
        To avoid this i moved the color spec from appstyle.css to mscore.cpp.
      (la)
      - fix #7881: Exchange voices does not work on last measure
7.nov (ws)
      - reorganized styles, to allow for different icon sets for dark and light theme
      (db)
      - fix vertical alignment of breve icon
      - minor copy edits to UI
5.nov (ws)
      - fix #7734: pasting lyrics with spaces is not working
4.nov (ws)
      - do not link clefs in linked parts
      (db)
      - UI copy edits
      - increase number of frets on guitar to 19
3.nov (ws)
      - fix #7788: Note entry button does not toggle when switching tabs
      - fix #7776: Page::isOdd() does not take page offset into account
      - fix #7779: Score::print() does not take page offset into account
      - fix #7789: Arrow too far on tablature causes crash
      - Add lyrics verse number to text palette. Verse numbers can be dropped to
        lyrics. Lyrics with verse numbers are always left aligned.
      - new text style for lyrics verse numbers
      - allow editing of instrument name in staff properties menu with text editor